src/tests/snapshots/niri__tests__window_opening__check_target_size@fsT-dwU-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AU\nconfig:\nwindow-rule {\n    open-fullscreen true\n    default-column-width {  }\n    border { on; }\n}"
expression: snapshot
snapshot_kind: text
---
initial configure:
size: 1280 × 720, bounds: 1240 × 680, states: [Fullscreen]

post-map configures:
size: 0 × 680, bounds: 1240 × 680, states: []
size: 1 × 680, bounds: 1240 × 680, states: [Activated]
